exclude jacc api and servlet api libs from kie-drools-wb tomcat assembly. Update README's (cherry picked from commit 8e3239ebb68afc5530cc46a149785ce83b2b9a1a)